fixed background repeat and stretch

--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,8 @@
 body{
     background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/8/87/LH_95.jpg/640px-LH_95.jpg);
     color: white;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 header h1{
     text-align: center;
